# Term-Project

./: README.md
C++程序设计/BSMS/: CMakeLists.txt  basis.cpp  basis.h  bread.cpp  bread.h  breadvector.cpp  breadvector.h  main.cpp  manager.cpp  manager.h  managervector.cpp  managervector.h  menu.cpp  menu.h  other.cpp  other.h  sale.cpp  sale.h  salevector.cpp  salevector.h  vector.hpp
人工智能导论/自主实验/: 基于图神经网络的交通预测自主实验报告.docx
人工智能导论/自主实验/STSGCN源代码/: README.md  STSGCN.py  flow.py  main.py  test.py  visual2.0.py
操作系统/: 3-操作系统课程设计任务-2022级发学生.doc  pintos使用提示.txt  pintos学习材料网址.txt  pintos实验环境安装.txt
操作系统/hda/: README.docx  README.md
操作系统/hda/hw-shell/: shell.c  tokenizer.c  tokenizer.h
操作系统/hda/pintos-userprog/: README.md
数字逻辑电路/ISE工程源代码/ArbitrarySequenceGenerator/: button_led_buzzer.bgn  button_led_buzzer.bit  button_led_buzzer.bld  button_led_buzzer.cmd_log  button_led_buzzer.cpj  button_led_buzzer.drc  button_led_buzzer.ngc  button_tb.v  (+35 more)
数据库系统/: 230128_student_数据库系统课程设计中的所有SQL语句.sql  源代码说明.md
数据结构/LBMSS/: main.cpp
电路与电子技术基础/: 直流电源-正弦波-方波-三角波-锯齿波信号发生器.ms14
计算机工程实践/源代码/: Chat.py  QA.py  RC.py  Recognition.py  SpeechSynthesis.py  Transmit.py  arm_yolo.py  color_test.py  inferapi.py  road.py  slam.py  stop.py  trace.py  traffic.pt
计算机组成原理/: 计组课程设计报告.docx
计算机组成原理/指令/: combinations.cpp  permutation.cpp  排列数.txt  排列数指令.docx  组合数.txt  组合数指令.docx
计算机网络/: 课程设计任务要求2023.docx
计算机网络/-网络编程源代码/: JpcapDemo.java
计算机网络/-网络配置/: Telnet.pkt  动态路由配置.pkt  同一交换机VLAN.pkt  网络集成设计.pkt  跨交换机VLAN.pkt  静态路由配置.pkt
软件工程/软件工程-SE408/: Statement-of-Work-SE408.docx  层次结构图.drawio
(+677 files in other folders)
